docs: :art: Index and Style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         </iframe> <br>
     </div>
 
-    <img class="robotica" src="/src/assets/img/Robotica-.png" alt="robotica Sustentável">
+    <div class="robotica" >
+        <img src="/src/assets/img/Robotica-.png" alt="robotica Sustentável">
+    </div>
+    
+    <img src="">
+    
 </body>
 </html>
