feat: adicionado botões de link

--- a/index.html
+++ b/index.html
@@ -11,21 +11,30 @@
     <title>Robótica Sustentável</title>
 </head>
 <body>
-    <!-- A -->
-    <div class="background-logo">
-        <a href="#"></a>
-    </div>
 
-    <div class="container">
-        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/ciVZMVURPCg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    <header>
+        <a href="#">
+            <img src="./src/assets/img/Robótica-Sustentável2.png" alt="logo-robotica" class="logo-robotica" />
+        </a>
+
+        <a id="botao-cadastro-login">
+            <img height="60" src="./src/assets/img/Robótica-Sustentável-login-cadastro.png" alt="imagem-login-cadastro" class="imagem-botao" />
+        </a>
+    </header>
+
+    <div class="container-video">
+        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/ciVZMVURPCg" title="YouTube-video-player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
         </iframe> <br>
     </div>
 
-    <div class="robotica" >
-        <img src="/src/assets/img/Robotica-.png" alt="robotica Sustentável">
+    <div class="robotica-banner" >
+        <img src="/src/assets/img/Robotica-banner.png" alt="robotica-Sustentável">
     </div>
     
-    <img src="">
-    
+    <div class="botoes">
+        <a href="#"><img class="animacao-botao" width="350" height="300" src="/src/assets/img/Educacao.png" alt="Botao-Educacao"></a>
+        <a href="#"><img class="animacao-botao" width="350" height="300" src="/src/assets/img/Sustentabilidade.png" alt="Botao-Sustentabilidade"></a></a>
+        <a href="#"><img class="animacao-botao" width="350" height="300" src="/src/assets/img/Quem-somos.png" alt="Botao-Quem-Somos"></a></a>
+    </div>    
 </body>
 </html>
