--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,8 @@
         <meta name="description" content="Este é o site do Instituto Robótica Sustentável">
         <meta name="keywords" content="Sustentável,sustentabilidade,educação,robótica">
         <meta name="author" content="Isadora Rocha,Kauan Carolino, Madson Oliveira, Santiago Nogueira">
-        <link rel="stylesheet" href="/src/CSS/style.css">
+
+        <link rel="stylesheet" href="../src/CSS/style.css">
         <title>Robótica Sustentável</title>
     </head>
     <body>
@@ -21,6 +22,6 @@
             </iframe> <br>
         </div>
 
-        <img class="robotica" src="/src/assets/img/Robotica-.png" alt="robotica Sustentável">
+        <img class="robotica" src="../src/assets/img/Robotica-.png" alt="robotica Sustentável">
     </body>
 </html>
