add-img-banner-edu e add-placeholders-nome-email

--- a/educacao.html
+++ b/educacao.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="caixa-logo">
-                <h1><img src="../src/assets/img/educacao.png" alt="Educação Robótica Sustentável"></h1>
+                <h1><img src="./src/assets/img/banner-educacao.png" alt="Educação Robótica Sustentável"></h1>
             </div>
         </header>
 
@@ -44,13 +44,13 @@
 
                 <form>
                     <label for="nomecompleto">Nome Completo</label>
-                    <input type="text" id="nomecompleto" class="input-padrao" required>
+                    <input type="text" id="nomecompleto" class="input-padrao" required placeholder="Seu primeiro e último nome">
                     
                     <label for="telefone">Telefone</label>
                     <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX)XXXXX-XXXX">
 
                     <label for="email">Email</label>
-                    <input type="email" id="email" class="input-padrao" required>
+                    <input type="email" id="email" class="input-padrao" required placeholder="Entre com seu e-mail válido">
                 </form>
 
             </section>
