fix: Header image and bar
Corrigi um bug do header na qual a imagem estava muito grande

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
         <a href="#"><img class="animacao-botao" width="350" height="300" src="/src/assets/img/Educacao.png" alt="Botao-Educacao"></a>
         <a href="#"><img class="animacao-botao" width="350" height="300" src="/src/assets/img/Sustentabilidade.png" alt="Botao-Sustentabilidade"></a></a>
         <a href="#"><img class="animacao-botao" width="350" height="300" src="/src/assets/img/Quem-somos.png" alt="Botao-Quem-Somos"></a></a>
-    </div>    
+    </div>
+    <div class="titulo-barra">
+        <h1 class="titulo">Missão e Valores</h1>
+    </div>
+
+    <p class="texto-missao-valores">
+        Somos um instituto especializado em Educação Tecnológica, através da sustentabilidade e tecnologia. Para isso, desenvolvemos a metodologia Robótica Sustentável, unindo as áreas mais modernas e inovadoras da educação, como o S.T.E.A.M. Maker, Robótica Educacional, Sustentabilidade e Empreendedorismo.
+    </p>
 </body>
 </html>
